# VirtualMotionTracker-for-linux

./: .gitignore  README.md
vmt_driver/: CMakeLists.txt  CommunicationManager.h  Config.cpp  DirectOSC.h  Log.cpp  Log.h  ServerTrackedDeviceProvider.cpp  TrackedDeviceServerDriver.cpp  TrackedDeviceServerDriver.h  dllmain.cpp  dllmain.h  framework.h
vmt_manager_gtk/: COPYING  README.md  meson.build  org.gpsnmeajp.vmt.vmt_manager.json
vmt_manager_gtk/data/: meson.build  org.gpsnmeajp.vmt.vmt_manager.desktop.in  org.gpsnmeajp.vmt.vmt_manager.gschema.xml  org.gpsnmeajp.vmt.vmt_manager.metainfo.xml.in
vmt_manager_gtk/data/icons/: meson.build
vmt_manager_gtk/po/: POTFILES  meson.build
vmt_manager_gtk/src/: main.py  meson.build  osc_manager.py  vmt_manager_gtk.cmb  vmt_manager_gtk.gresource.xml  vmt_manager_gtk.in  window.py  window.ui
